--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,12 @@ body{
     margin: 0;
 }
 
-.heading{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 920px;
-    margin: auto;
-    color: white;
+img{
+    width: 100%;
+}
+
+.container{
+    max-width: 960px;
 }
 
 header{
@@ -20,18 +19,29 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
     background-color:  rgba(77, 71, 71, 0.39);
-    flex-basis: 100%;
-    height: 100%;
     width: 100%;
+    height: 100%;
     background-blend-mode: multiply;
     background-position: center;
-    padding-bottom: 150px;
+    padding: 0px 0px 100px 0px;
 }
 
-h3{
+.heading{
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    margin: auto;
+}
+
+.heading h3{
     font-size: 20px;
     text-transform: uppercase;
     margin: 15px 5px;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
 }
 
 .heading .Adventure{
@@ -40,23 +50,32 @@ h3{
 }
 
 nav ul{
+    margin: auto;
+    justify-content: center;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+    align-items: center;
     display: flex;
+    gap: 20px;
 }
 nav ul li{
     list-style-type: none;
+
 }
 nav ul li a{
     text-decoration: none;
-    padding: 0 22px 0 0;
+    padding: 0 0px 0 0;
     color: white;
     font-size: 17px;
 }
 
 
 nav ul li a:hover{
-    border: 5px solid white;
+    border: 2px 2px solid white;
     border-radius: 15px;
     align-items: center;
+    box-sizing: border-box;
 }
 h2{
     text-align: center;
@@ -75,7 +94,7 @@ h2{
 
 }
 h1{
-    font-size: 63px;
+    font-size: 40px;
     color: white;
     margin: auto;
     text-align: center;
@@ -109,11 +128,8 @@ button{
     padding-top: 70px;
 }
 .section{
-    display: flex;
-    margin:auto;
     padding: 0;
-    flex-direction: row;
-    max-width: 900px;
+    margin: auto;
 }
 
 .section h4{
@@ -125,9 +141,13 @@ button{
     
 }
 section{
-    width: 50%;
     padding: 0px 35px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 100%;
+    width: 80%;
 }
 
 .section img{
@@ -169,6 +189,16 @@ section{
     object-fit: cover;
     background-position: center;
     background-attachment: fixed;
+    padding: 100px 0px;
+    color: white;
+}
+
+.section2{
+    margin: auto;
+}
+
+.two{
+    width: 100%;
 }
 .explore h3{
     font-size: 55px;
@@ -184,29 +214,20 @@ section{
     text-align: justify;
 }
 .explore a{}
-.container{
-    color: white;
-    display: flex;
-    margin: auto;
-    justify-content: center;
-    flex-direction: column;
-    max-width: 900px;
-    padding-left: 800px;
-    padding-right: 200px;
-    padding-bottom: 150px;
-    padding-top: 150px;
-}
+
 
 .upcoming{
-    display: flex;
-    max-width: 960px;
     margin: auto;
     gap: 20px;
     padding-top: 100px;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
 }
 .write{
-    width: 33.33%;
+    width: 80%;
 }
 .write h4{
     font-size: 30px;
@@ -228,8 +249,9 @@ section{
 }
 
 .image {
-    width: 33.33%;
+    width: 80%;
     object-fit: cover;
+    margin: auto;
 }
 
 .image .img1{
@@ -250,16 +272,19 @@ section{
 
 
 
-.footermain{
+.footer{
     width: 100%;
     background-color: #ff0000;
-    padding: 50px;
+    padding: 50px 0px;
     margin-top: 100px;
+    display: flex;
+    flex-direction: column;
 }
 
-.footermain p{
+.footer p{
     color: white;
     margin: auto;
     font-size: 20px;
     text-align: center;
+    display: block;
 }
